--- a/WX/src/main/AndroidManifest.xml
+++ b/WX/src/main/AndroidManifest.xml
@@ -24,7 +24,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
@@ -73,9 +72,9 @@
             android:theme="@style/horizontal_slide">
         </activity>
         <!-- 查找好友信息界面 -->
-        <activity android:name=".fx.UserInfoActivity"
-                  android:theme="@style/horizontal_slide"
-            >
+        <activity
+            android:name=".fx.UserInfoActivity"
+            android:theme="@style/horizontal_slide">
         </activity>
         <!-- 发送好友验证申请界面 -->
         <activity
@@ -86,6 +85,12 @@
         <!-- 设置界面 -->
         <activity
             android:name=".fx.SettingActivity"
+            android:theme="@style/horizontal_slide">
+        </activity>
+
+        <!-- 聊天界面 -->
+        <activity
+            android:name=".fx.ChatActivity"
             android:theme="@style/horizontal_slide">
         </activity>
 
