--- a/WX/src/main/AndroidManifest.xml
+++ b/WX/src/main/AndroidManifest.xml
@@ -94,6 +94,21 @@
             android:theme="@style/horizontal_slide">
         </activity>
 
+        <!-- 添加新朋友界面 -->
+        <activity android:name=".fx.NewFriendsActivity"
+                  android:theme="@style/horizontal_slide">
+        </activity>
+
+        <!-- 开机自启动服务
+        <receiver android:name="com.easemob.chat.StartServiceReceiver">
+            <intent-filter android:priority="1000" >
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </receiver>
+        -->
         <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
