--- a/WX/build.gradle
+++ b/WX/build.gradle
@@ -22,7 +22,8 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:support-v4:18.0.0'
     compile 'com.alibaba:fastjson:1.2.6'
-    compile files('libs/easemobchat_2.2.4.jar')
 }
